# pi_agents

./: .gitignore  AGENTS.md  EXTENSIONS.md  README.md  justfile  package.json  test-trigger.txt
agents/coder/: AGENTS.md  SYSTEM.md  agent.yaml
agents/coder/.pi/: settings.json
agents/jobsearch/: AGENTS.md  SYSTEM.md  agent.yaml
agents/jobsearch/.pi/: settings.json
crewai-jobs/: .env.example  .gitignore  PLAN-jobsearch.md  README.md  pyproject.toml  run.py
crewai-jobs/data/: seen-jobs.json
crewai-jobs/output/news_summarizer/: research.md  summary.md
crewai-jobs/src/crewai_jobs/: __init__.py  __main__.py  cli.py  config.py
crewai-jobs/src/crewai_jobs/crews/: __init__.py
crewai-jobs/src/crewai_jobs/crews/jobsearch/: __init__.py  crew.py
crewai-jobs/src/crewai_jobs/crews/jobsearch/config/: agents.yaml  tasks.yaml
crewai-jobs/src/crewai_jobs/crews/news_summarizer/: __init__.py  crew.py
crewai-jobs/src/crewai_jobs/crews/news_summarizer/config/: agents.yaml  tasks.yaml
crewai-jobs/src/crewai_jobs/tools/: __init__.py  job_search.py  job_tracker.py  job_verifier.py  news_scraper.py  resume_loader.py
extensions/: README.md  audit-logger.ts  file-guard.ts
langgraph-jobs/: PLAN.md  README.md  pyproject.toml  run.py
langgraph-jobs/output/jobsearch/: report-go-2026-06-25.md  report-python-2026-06-25.md
langgraph-jobs/src/langgraph_jobs/: __init__.py  __main__.py  cli.py  config.py
langgraph-jobs/src/langgraph_jobs/graphs/: __init__.py
langgraph-jobs/src/langgraph_jobs/graphs/jobsearch/: __init__.py  graph.py
langgraph-jobs/src/langgraph_jobs/tools/: __init__.py  job_search.py  job_tracker.py  job_verifier.py  page_fetcher.py  resume_loader.py  web_search.py
scripts/: launch-agent-systemd.sh  launch-agent.sh  service-systemd.py  service.py  service.sh
src/: ext.py  herd-setup.sh  herdr-setup.py  orchestrator.ts  setup.ts
templates/base-agent/: .env.example  AGENTS.md  SYSTEM.md  agent.yaml
(+8 files in other folders)
