[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewai-jobs"
version = "0.2.0"
description = "Multi-crew CrewAI project: scheduled AI jobs (news briefs, PR review, ...) — call from n8n via SSH"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "crewai>=0.80.0",
    "litellm>=1.89.4",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "ddgs>=8.0.0",
]

[project.scripts]
# `uv sync` then `uv run crewai-jobs news ...`
crewai-jobs = "crewai_jobs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Each crew ships its config/*.yaml as package data so @CrewBase can
# find them after `pip install`. Add one line per new crew.
"crewai_jobs.crews.news_summarizer" = ["config/*.yaml"]
"crewai_jobs.crews.jobsearch" = ["config/*.yaml"]

# ─── uv config ──────────────────────────────────────────────────────────────

[tool.uv]
package = true
