[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-jobs"
version = "0.1.0"
description = "Multi-graph LangGraph project: scheduled AI jobs (job search, news briefs, ...) — call from n8n via SSH"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.5.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "ddgs>=8.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
langgraph-jobs = "langgraph_jobs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
